update pom to allow deep reflection